height on slider

--- a/src/pages/Inicio/Inicio.css
+++ b/src/pages/Inicio/Inicio.css
@@ -70,6 +70,7 @@
     animation: span-animation 1s ease-in-out both;
     animation-delay: 2s;
     @media (max-width: 64rem){
+        height: 100%;
         flex-flow: column-reverse nowrap;
         align-items: center;
         gap: 2rem;
@@ -95,11 +96,13 @@
     justify-content: flex-start;
 
     @media (max-width: 64rem){
+        overflow: auto;
+        scroll-behavior: auto;
         max-height: 100%;
         height: 100%;
     }
     @media (max-width: 48rem){
-            padding-bottom: 0;
+        padding-bottom: 0;
     }
 }
 .Works-wrapper{
@@ -335,6 +338,7 @@
     animation: h2-animation 1s ease-in-out both;
     animation-delay: 1s;
     white-space: break-spaces;
+    text-wrap: balance;
 
     @media (max-width: 64rem){
         width: 100%;
